# bingers

./: Cargo.toml  README.md
src/: app.rs  errors.rs  main.rs  tvmaze_api.rs  user_data.rs
