[package]
name = "bingers"
version = "0.1.0"
authors = ["df5602 <dominik@fankhausers.ch>"]

[dependencies]
hyper = "*"
hyper-tls = "*"
native-tls = "*"
futures = "*"
tokio-core = "*"
tokio-retry = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
clap = "*"
error-chain = "*"

[patch.crates-io]
tokio-retry = { git = "https://github.com/df5602/rust-tokio-retry", branch = "feature/retry-condition" }